<resources>
    <string name="app_name">Optoma Launcher</string>
    <string name="title_activity_main">HomeActivity</string>
    <string name="home_input_source">Input Source</string>
    <string name="home_settings">Settings</string>
    <string name="home_display_settings">Display Settings</string>
    <string name="is_miracast">Miracast</string>
    <string name="is_vga">VGA</string>
    <string name="is_hdmi_01">HDMI 01</string>
    <string name="is_hdmi_02">HDMI 02</string>
    <string name="is_hdmi_03">HDMI 03</string>
    <string name="is_hdmi_04">HDMI 04</string>
    <string name="is_usb_01">USB 01</string>
    <string name="is_usb_02">USB 02</string>
    <string name="is_svideo">S-video</string>
    <string name="is_set_shortcut">Set Shortcut</string>
    <string name="is_ss_title">Set shortcut for your quick access to input sources.</string>
    <string name="is_ss_ss01">Shortcut 01</string>
    <string name="is_ss_ss02">Shortcut 02</string>
    <string name="is_ss_ss03">Shortcut 03</string>
    <string name="setting_power">Power</string>
    <string name="setting_power_title">Power Mode</string>
    <string name="setting_power_content">Active</string>
    <string name="setting_account">Account</string>
    <string name="setting_account_title">User name</string>
    <string name="setting_account_content">Optoma</string>
    <string name="setting_general">General</string>
    <string name="setting_general_title">Projector ID</string>
    <string name="setting_general_content">06</string>
    <string name="setting_network">Network</string>
    <string name="setting_network_title">Network Status</string>
    <string name="setting_network_content">Connected</string>
    <string name="setting_information">Information</string>
    <string name="setting_information_title">Software Version</string>
    <string name="setting_information_content">1.2.14</string>
    <string name="setting_bluetooth">Bluetooth</string>
    <string name="setting_bluetooth_title">Current Mode</string>
    <string name="setting_bluetooth_content">Off</string>
    <string name="setting_system">System</string>
    <string name="setting_system_title">Language</string>
    <string name="setting_system_content">English</string>
    <string name="setting_audio">Audio</string>
    <string name="setting_audio_title">Volume</string>
    <string name="setting_audio_content">3</string>
    <string name="setting_control">Control</string>
    <string name="setting_control_title">Allow access</string>
    <string name="setting_control_content">Crestron, PJ Link, HTTP</string>
    <string name="audio_internal_speaker">Internal Speaker</string>
    <string name="audio_mute">Mute</string>
    <string name="audio_mic">Mic</string>
    <string name="audio_volume">Volume</string>
    <string name="audio_mic_volume">Mic Volume</string>
    <string name="audio_input">Audio Input</string>
    <string name="audio_delay">Audio Delay</string>
    <string name="audio_out">Audio Out (Standby)</string>
    <string name="audio_srs">SRS</string>
    <string name="info_back_to_settings">Back to Settings</string>
    <string name="info_legal">Legal</string>
    <string name="info_term_of_service">Term of Service</string>
    <string name="info_privacy_policy">Privacy Policy</string>
    <string name="info_about">About</string>
    <string name="info_serial_number">Serial Number</string>
    <string name="info_regulatory">Regulatory</string>
    <string name="info_sw_version">Software Version</string>
    <string name="info_lan_fw_version">LAN Firmware Version</string>
    <string name="info_mcu_fw_version">MCU Firmware Version</string>
    <string name="info_control">Control</string>
    <string name="info_projector_id">Projector ID</string>
    <string name="info_remote_code">Remote code</string>
    <string name="info_active_remote_code">Remote code(Active)</string>
    <string name="info_hardware">Hardware</string>
    <string name="info_power_mode">Power Mode(Standby)</string>
    <string name="info_high_altitude">High Altitude</string>
    <string name="info_filter_usage">Filter Usage(hours)</string>
    <string name="info_lamp1">Lamp 1 (hours)</string>
    <string name="info_bright">Bright</string>
    <string name="info_eco">Eco</string>
    <string name="info_dynamic">Dynamic</string>
    <string name="info_ecoplus">Eco+</string>
    <string name="info_lamp2">Lamp 2 (hours)</string>
    <string name="info_display">Display</string>
    <string name="info_bright_mode">Brightness Mode</string>
    <string name="info_resolution">Resolution</string>
    <string name="info_refresh_rate">Refresh Rate</string>
    <string name="info_display_mode">Display Mode</string>
    <string name="info_network">Network</string>
    <string name="info_lan_status">LAN Status</string>
    <string name="info_ip_address">IP Address</string>
    <string name="info_ssid">SSID</string>
    <string name="info_connection_mode">Connection Mode</string>
    <string name="info_signal_strength">Signal Strength</string>
    <string name="info_mac_address">MAC Address</string>
    <string name="info_wifi_status">Wi-Fi Status</string>
    <string name="info_subnet_mask">Subnet Mask</string>
    <string name="info_gateway">Gateway</string>
    <string name="info_dns">DNS</string>
    <string name="control_crestron">Crestron</string>
    <string name="control_extron">Extron</string>
    <string name="control_pjlink">PJ Link</string>
    <string name="control_amx_dd">AMX Device Discovery</string>
    <string name="control_telnet">Telnet</string>
    <string name="control_http">HTTP</string>
    <string name="system_language">language</string>
    <string name="system_date_and_time">Date and Time</string>
    <string name="system_automatic">Automatic (Network-provided)</string>
    <string name="system_set_time">Set Time</string>
    <string name="system_security">Security</string>
    <string name="system_security_timer">Security Timeer</string>
    <string name="system_change_password">Change Password</string>
    <string name="system_update_software">Update Software</string>
    <string name="system_reset_all_settings">Reset All Settings</string>
    <string name="system_restore">Restore</string>
    <string name="system_update_title">There are new updates for your system, would you like to update the software?</string>
    <string name="system_update_now">Update right now.</string>
    <string name="system_download_restart">Download, but do it after restart.</string>
    <string name="system_do_later">Do later.</string>
    <string name="power_sleep_now">Sleep Now</string>
    <string name="power_restart">Restart</string>
    <string name="power_direct_poweron">Direct Power On</string>
    <string name="power_signal_poweron">Signal Power On</string>
    <string name="power_auto_poweroff">Auto Power Off (min)</string>
    <string name="power_sleep">Sleep</string>
    <string name="power_sleep_timer">Sleep Timer (min)</string>
    <string name="power_quick_resume">Quick Resume</string>
    <string name="power_mode">Power Mode (Standby)</string>
    <string name="power_usb_power">USB Power</string>
    <string name="power_wireless">Wireless</string>
    <string name="bluetooth_onoff">On/Off</string>
    <string name="bluetooth_connect_bt">Connect Bluetooth</string>
    <string name="general_config_projector_id">Configure Projector ID</string>
    <string name="general_config_remote_code">Configure Remote Code</string>
    <string name="general_screen_saver_timeout">Screen Saver Timeout</string>
    <string name="general_send_log">Send log &amp; error to Optoma</string>
    <string name="general_closed_captioning">Closed Captioning</string>
    <string name="network_wifi">Wi-Fi</string>
    <string name="network_ssid">SSID</string>
    <string name="network_connection_mode">Connection Mode</string>
    <string name="network_lan">LAN</string>
    <string name="network_dhcp">DHCP</string>
    <string name="network_ip_address">IP Address</string>
    <string name="network_subnet_mask">Subnet Mask</string>
    <string name="network_gateway">Gateway</string>
    <string name="network_dns">DNS</string>
    <string name="network_reset">Reset</string>
    <string name="network_test_network">Test Network</string>
    <string name="projector_setup">Projector Setup</string>
    <string name="projector_image_settings">Image Settings</string>
    <string name="projector_display_adjustment">Display Adjustment</string>
    <string name="projector_pip_pbp">PIP/PBP</string>
    <string name="projector_3d">3D</string>
    <string name="projector_signal">Signal</string>
    <string name="projector_installation">Setup</string>
    <string name="projector_components_control">Devices Control</string>
    <string name="projector_source_control">Source Control</string>
    <string name="threed_3d_mode">3D Mode</string>
    <string name="threed_3d_2d">3D-2D</string>
    <string name="threed_3d_format">3D Format</string>
    <string name="threed_3d_sync_invert">3D sync invert</string>
    <string name="threed_2d_3d">2D-3D</string>
    <string name="signal_automatic">Automatic</string>
    <string name="signal_frequency">Frequency</string>
    <string name="signal_phase">Phase</string>
    <string name="signal_hposition">H. Position</string>
    <string name="signal_vposition">V. Position</string>
    <string name="signal_color_space">Color Space</string>
    <string name="signal_white_level">White Level</string>
    <string name="signal_black_level">Black Level</string>
    <string name="signal_saturation">Saturation</string>
    <string name="signal_hue">Hue</string>
    <string name="signal_ire">IRE</string>
    <string name="setup_position">Position</string>
    <string name="setup_ceiling_mount">Ceiling Mount</string>
    <string name="setup_rear_projection">Rear Projection</string>
    <string name="setup_test_pattern">Test Pattern</string>
    <string name="sc_hdmi_link_settings">HDMI Link Settings</string>
    <string name="sc_hdmi_link">HDMI Link</string>
    <string name="sc_inclusive_of_tv">Inclusive of TV</string>
    <string name="sc_power_on_link">Power On Link</string>
    <string name="sc_power_off_link">Power Off Link</string>
    <string name="sc_hdbaset_control">HDBaseT Control</string>
    <string name="sc_ethernet">Ethernet</string>
    <string name="sc_rs232">RS232</string>
    <string name="back_projector">Back to Projector Setup</string>
    <string-array name="ssArray">
        <item>Miracast</item>
        <item>VGA</item>
        <item>HDMI 01</item>
        <item>HDMI 02</item>
        <item>HDMI 03</item>
        <item>HDMI 04</item>
        <item>USB 01</item>
        <item>USB 02</item>
        <item>S-video</item>
    </string-array>
    <string-array name="settingTitle">
        <item>Power Mode</item>
        <item>User name</item>
        <item>Projector ID</item>
        <item>Network Status</item>
        <item>Software Version</item>
        <item>Current Mode</item>
        <item>Language</item>
        <item>Volume</item>
        <item>Allow access</item>
    </string-array>
    <string-array name="settingContent">
        <item>Active</item>
        <item>Optoma</item>
        <item>06</item>
        <item>Connected</item>
        <item>1.2.14</item>
        <item>Off</item>
        <item>English</item>
        <item>3</item>
        <item>Crestron, PJ Link, HTTP</item>
    </string-array>
    <string-array name="threed_3d_mode_array">
        <item>Off</item>
        <item>DLP-Link</item>
        <item>IR</item>
    </string-array>
    <string-array name="threed_3d_2d_array">
        <item>3D</item>
        <item>L</item>
        <item>R</item>
    </string-array>
    <string-array name="threed_3d_format_array">
        <item>Auto</item>
        <item>SBS</item>
        <item>Top and Bottom</item>
        <item>Frame Sequential</item>
        <item>Frame Packing</item>
        <item>Off</item>
    </string-array>
</resources>