<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="580dp"
    android:layout_height="310dp"
    android:background="#2e2a25">
    <TextView
        android:id="@+id/update_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="48dp"
        android:gravity="left"
        android:text="@string/system_update_title"
        android:textSize = "20sp"
        android:textColor="@color/select"
        android:fontFamily="sans-serif">
    </TextView>
    <View
        android:id="@+id/update_now_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/update_tv"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/setshortcut_selected"
        android:focusable="true">
    </View>
    <TextView
        android:id="@+id/update_now_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/update_tv"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/system_update_now"
        android:textSize = "18sp"
        android:textColor="#5b646f"
        android:fontFamily="sans-serif">
    </TextView>
    <View
        android:id="@+id/update_download_restart_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/update_now_view"
        android:layout_marginLeft="32dp"
        android:background="@drawable/setshortcut_selected"
        android:focusable="true">
    </View>
    <TextView
        android:id="@+id/update_download_restart_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/update_now_view"
        android:layout_marginLeft="64dp"
        android:gravity="center_vertical"
        android:text="@string/system_download_restart"
        android:textSize = "18sp"
        android:textColor="#5b646f"
        android:fontFamily="sans-serif">
    </TextView>
    <View
        android:id="@+id/update_do_later_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/update_download_restart_view"
        android:layout_marginLeft="32dp"
        android:background="@drawable/setshortcut_selected"
        android:focusable="true">
    </View>
    <TextView
        android:id="@+id/update_do_later_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/update_download_restart_view"
        android:layout_marginLeft="64dp"
        android:gravity="center_vertical"
        android:text="@string/system_do_later"
        android:textSize = "18sp"
        android:textColor="#5b646f"
        android:fontFamily="sans-serif">
    </TextView>
</RelativeLayout>
