<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="480dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="64dp"
        android:background="@drawable/setting_background"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/system_iv"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            android:scaleType="fitStart"
            android:alpha="0.25"
            app:srcCompat="@drawable/system">
        </android.support.v7.widget.AppCompatImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="74dp"
            android:gravity="left"
            android:text="@string/setting_system"
            android:textSize = "45sp"
            android:textColor="#40FFFFFF"
            android:textStyle="bold"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/system_language_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="91dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/setting_selected"
            android:focusable="true">
        </View>
        <TextView
            android:id="@+id/system_language_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="91dp"
            android:layout_marginLeft="48dp"
            android:gravity="center_vertical"
            android:text="@string/system_language"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <TextView
            android:id="@+id/system_language_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="91dp"
            android:layout_marginRight="24dp"
            android:layout_alignParentEnd="true"
            android:gravity="right|center_vertical"
            android:text="English"
            android:textSize = "18sp"
            android:textColor="#004b87"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/system_date_time_main_view"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_below="@+id/system_language_view"
            android:layout_marginLeft="24dp"
            android:background="@drawable/setting_1st_bg"
            android:visibility="invisible">
        </View>
        <TextView
            android:id="@+id/system_date_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_language_view"
            android:layout_marginLeft="48dp"
            android:gravity="center_vertical"
            android:text="@string/system_date_and_time"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/system_date_time_divider"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/system_date_time_tv"
            android:layout_alignBottom="@+id/system_set_time_view"
            android:layout_marginLeft="53dp"
            android:background="@color/white" />
        <View
            android:id="@+id/system_automatic_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/system_date_time_tv"
            android:layout_marginLeft="24dp"
            android:background="@drawable/system_selected"
            android:focusable="true">
        </View>
        <TextView
            android:id="@+id/system_automatic_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_date_time_tv"
            android:layout_marginLeft="72dp"
            android:gravity="center_vertical"
            android:text="@string/system_automatic"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/system_automatic_iv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_date_time_tv"
            android:layout_marginRight="24dp"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:scaleType="center"
            app:srcCompat="@drawable/on">
        </android.support.v7.widget.AppCompatImageView>
        <View
            android:id="@+id/system_set_time_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/system_automatic_tv"
            android:layout_marginLeft="24dp"
            android:background="@drawable/system_selected"
            android:focusable="false">
        </View>
        <TextView
            android:id="@+id/system_set_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_automatic_tv"
            android:layout_marginLeft="72dp"
            android:gravity="center_vertical"
            android:text="@string/system_set_time"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <TextView
            android:id="@+id/system_set_time_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_automatic_tv"
            android:layout_marginRight="24dp"
            android:layout_alignParentEnd="true"
            android:gravity="right|center_vertical"
            android:text="24, Mar 2017 17:53"
            android:textSize = "18sp"
            android:textColor="#004b87"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/system_security_main_view"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_below="@+id/system_set_time_view"
            android:layout_marginLeft="24dp"
            android:background="@drawable/setting_1st_bg"
            android:visibility="invisible">
        </View>
        <View
            android:id="@+id/system_security_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/system_set_time_view"
            android:layout_marginLeft="24dp"
            android:background="@drawable/system_selected"
            android:focusable="true">
        </View>
        <TextView
            android:id="@+id/system_security_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_set_time_view"
            android:layout_marginLeft="48dp"
            android:gravity="center_vertical"
            android:text="@string/system_security"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/system_security_iv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_set_time_view"
            android:layout_marginRight="24dp"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:scaleType="center"
            app:srcCompat="@drawable/off">
        </android.support.v7.widget.AppCompatImageView>
        <View
            android:id="@+id/system_security_divider"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/system_security_view"
            android:layout_alignBottom="@+id/system_change_pw_view"
            android:layout_marginLeft="53dp"
            android:background="@color/white" />
        <View
            android:id="@+id/system_security_timer_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/system_security_view"
            android:layout_marginLeft="24dp"
            android:background="@drawable/system_selected"
            android:focusable="false">
        </View>
        <TextView
            android:id="@+id/system_security_timer_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_security_view"
            android:layout_marginLeft="72dp"
            android:gravity="center_vertical"
            android:text="@string/system_security_timer"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <TextView
            android:id="@+id/system_security_timer_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_security_view"
            android:layout_marginRight="24dp"
            android:layout_alignParentEnd="true"
            android:gravity="right|center_vertical"
            android:text="00:00"
            android:textSize = "18sp"
            android:textColor="#004b87"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/system_change_pw_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/system_security_timer_view"
            android:layout_marginLeft="24dp"
            android:background="@drawable/system_selected"
            android:focusable="false">
        </View>
        <TextView
            android:id="@+id/system_change_pw_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_security_timer_view"
            android:layout_marginLeft="72dp"
            android:gravity="center_vertical"
            android:text="@string/system_change_password"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/system_update_sw_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/system_change_pw_view"
            android:layout_marginLeft="24dp"
            android:background="@drawable/system_selected"
            android:focusable="true">
        </View>
        <TextView
            android:id="@+id/system_update_sw_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_change_pw_view"
            android:layout_marginLeft="48dp"
            android:gravity="center_vertical"
            android:text="@string/system_update_software"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/system_reset_all_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/system_update_sw_view"
            android:layout_marginLeft="24dp"
            android:background="@drawable/system_selected"
            android:focusable="true">
        </View>
        <TextView
            android:id="@+id/system_reset_all_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_update_sw_view"
            android:layout_marginLeft="48dp"
            android:gravity="center_vertical"
            android:text="@string/system_reset_all_settings"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/system_restore_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/system_reset_all_view"
            android:layout_marginLeft="24dp"
            android:background="@drawable/system_selected"
            android:focusable="true">
        </View>
        <TextView
            android:id="@+id/system_restore_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/system_reset_all_view"
            android:layout_marginLeft="48dp"
            android:gravity="center_vertical"
            android:text="@string/system_restore"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/system_mask_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="91dp"
            android:layout_marginBottom="24dp"
            android:background="#b22e2a25"
            android:visibility="invisible"
            >
        </View>
    </RelativeLayout>
</RelativeLayout>
