<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="480dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="64dp"
        android:background="@drawable/setting_background"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/bluetooth_iv"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            android:scaleType="fitStart"
            android:alpha="0.25"
            app:srcCompat="@drawable/bluetooth">
        </android.support.v7.widget.AppCompatImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="74dp"
            android:gravity="left"
            android:text="@string/setting_bluetooth"
            android:textSize = "45sp"
            android:textColor="#40FFFFFF"
            android:textStyle="bold"
            android:fontFamily="sans-serif">
        </TextView>
        <View
            android:id="@+id/bluetooth_onoff_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="91dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/setting_selected"
            android:focusable="true">
        </View>
        <TextView
            android:id="@+id/bluetooth_onoff_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="91dp"
            android:layout_marginLeft="48dp"
            android:gravity="center_vertical"
            android:text="@string/bluetooth_onoff"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/bluetooth_onoff_iv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="91dp"
            android:layout_marginRight="24dp"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:scaleType="center"
            app:srcCompat="@drawable/off">
        </android.support.v7.widget.AppCompatImageView>
        <View
            android:id="@+id/bluetooth_connect_bt_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/bluetooth_onoff_view"
            android:layout_marginLeft="24dp"
            android:background="@drawable/setting_selected"
            android:focusable="true">
        </View>
        <TextView
            android:id="@+id/bluetooth_connect_bt_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/bluetooth_onoff_view"
            android:layout_marginLeft="48dp"
            android:gravity="center_vertical"
            android:text="@string/bluetooth_connect_bt"
            android:textSize = "18sp"
            android:textColor="#d0d3d4"
            android:fontFamily="sans-serif">
        </TextView>
    </RelativeLayout>
</RelativeLayout>
